# ls

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/plexyze/ls/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  RendererES3.cpp  gles3jni.cpp  gles3jni.h  log.cpp  log.h  lsjni.cpp  lsjni.h  start_actor.h
app/src/main/cpp/ls/3d/: angle.h  mat4.h  mat_transform.h  mesh.cpp  mesh.h  vec3.h  vec4.h
app/src/main/cpp/ls/app/: application.cpp  application.h
app/src/main/cpp/ls/core/: actor.h  actor.inl  array.h  default_id.h  device.h  device.inl  memory.h  memory.inl  message.h  message_log.h  pointer.h  sandbox.h  sandbox.inl  stopwatch.h  thread_pool.h  thread_pool.inl  utils.h
app/src/main/cpp/ls/device/: log.h
app/src/main/cpp/ls/ui/: opengles3.h  opengles3.inl  renderer.h
app/src/main/java/com/plexyze/ls/: GLES3JNILib.java  GLES3JNIView.java  MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/plexyze/ls/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
